--- a/css/dark.css
+++ b/css/dark.css
@@ -868,7 +868,11 @@ body.top-search-open .dark #header-wrap:not(.not-dark) #top-search a,
 .parallax.dark .testimonial .flex-control-nav li:hover a,
 .parallax.dark .testimonial .flex-control-nav li a.flex-active { background-color: #FFF; }
 
-.dark .team-desc.team-desc-bg { background-color: rgba(255,255,255,0.05); }
+.dark .team-desc.team-desc-bg { 
+	background-color: #0A0A0A; 
+	border: 1px solid #E0AE27;
+	border-radius: 4px;
+}
 
 .dark .team-content { color: #999; }
 
@@ -1259,8 +1263,8 @@ body #side-panel.dark #side-panel-trigger-close a {
 .dark .btn-link:focus { color: #EEE; }
 
 .dark .dropdown-menu {
-	background-color: #333;
-	border-color: #3F3F3F;
+	background-color: #0A0A0A;
+	border-color: #E0AE27;
 }
 
 .dark .dropdown-menu .dropdown-divider { border-top-color: rgba(255,255,255,0.1); }
